<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olive" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/personal_margin_top"
            android:background="@drawable/gray_corners_cicle" >

            <com.mci.firstidol.view.RoundedImageView
                android:id="@+id/icon_mine"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/alert_bg"
                app:corner_radius="90dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/icon_mine"
                android:text="更换头像"
                android:textColor="@color/text_color_login_gray" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="个性展示"
            android:textColor="@color/text_color_login_gray" />

        <LinearLayout style="@style/personal_layout_style" >

            <RelativeLayout style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/edit_nickname"
                    style="@style/apply_master_edit_style"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:hint="@string/nickname_hint" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>


            <RelativeLayout style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/edit_sex"
                    style="@style/apply_master_edit_style"
                    android:hint="@string/sex_hint"
                    android:singleLine="true" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>

            <View style="@style/gray_view_line_fill" />

            <RelativeLayout style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/edit_birthday"
                    style="@style/apply_master_edit_style"
                    android:hint="@string/birthday_hint"
                    android:singleLine="true" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>

            <View style="@style/gray_view_line_fill" />

            <RelativeLayout style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/edit_location"
                    style="@style/apply_master_edit_style"
                    android:hint="@string/location_hint"
                    android:singleLine="true" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="个性展示"
            android:textColor="@color/text_color_login_gray" />

        <LinearLayout style="@style/personal_layout_style" >

            <RelativeLayout
                android:id="@+id/layout_tip"
                style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/tip" />

                <TextView
                    android:id="@+id/edit_tip"
                    style="@style/apply_master_edit_style"
                    android:hint="@string/tip_hint"
                    android:singleLine="true" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>

            <View style="@style/gray_view_line_fill" />

            <RelativeLayout
                android:id="@+id/layout_myshow"
                style="@style/personal_item_layout" >

                <TextView
                    android:id="@+id/text_info"
                    style="@style/apply_master_text_left"
                    android:text="@string/myShow" />

                <TextView
                    android:id="@+id/edit_myShow"
                    style="@style/apply_master_edit_style"
                    android:hint="@string/myShow_hint"
                    android:singleLine="true" />

                <ImageView style="@style/personal_arrow_right" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_wheel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/transparent"
                android:textColor="@color/color_main"
                android:textSize="16sp"
                android:text="取消" />
            
            <Button 
                android:id="@+id/btn_ok"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/transparent"
                android:textColor="@color/color_main"
                android:textSize="16sp"
                android:text="确定"/>
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <com.mci.firstidol.view.wheel.WheelView
                android:id="@+id/id_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </com.mci.firstidol.view.wheel.WheelView>

            <com.mci.firstidol.view.wheel.WheelView
                android:id="@+id/id_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </com.mci.firstidol.view.wheel.WheelView>

            <com.mci.firstidol.view.wheel.WheelView
                android:id="@+id/id_district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </com.mci.firstidol.view.wheel.WheelView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>